--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -63,26 +63,38 @@ $(document).ready(function(){
   }
 
   function renderMap(data) {
-    var dataSource = new Cesium.GeoJsonDataSource();
-    var flights = dataSource.load(data);
-    flights.then(function(dataSource){
+    var promise = Cesium.GeoJsonDataSource.load(data);
+    promise.then(function(dataSource) {
       viewer.dataSources.add(dataSource);
       viewer.zoomTo(dataSource);
-
       var entities = dataSource.entities.values;
 
       for (var i = 0; i < entities.length; i++) {
         var entity = entities[i];
-        console.log(entity);
-        entity.billboard.color = Cesium.Color.fromBytes(0, 230, 240, 38);
-        // entity.point = new Cesium.PointGraphics({
-        //     color: Cesium.Color.fromRandom(),
-        //     pixelSize: 10
-        // });
+        var name = entity.name;
+        if (entity.billboard != undefined) {
+          if (entity.properties.feature_type._value === "airport") {
+            entity.billboard.image = "<%= asset_path('airport.png') %>";
+          } else if (entity.properties.feature_type._value === "waypoint") {
+            entity.billboard.image = "<%= asset_path('waypoint.png') %>";
+          }
+        }
       }
     })
-      // stroke: Cesium.Color.fromBytes(0, 230, 240, 38)
   }
+
+
+  //       var entity = entities[i];
+  //       console.log(entity);
+  //       entity.billboard.color = Cesium.Color.fromBytes(0, 230, 240, 38);
+  //       // entity.point = new Cesium.PointGraphics({
+  //       //     color: Cesium.Color.fromRandom(),
+  //       //     pixelSize: 10
+  //       // });
+  //     }
+  //   })
+  //     // stroke: Cesium.Color.fromBytes(0, 230, 240, 38)
+  // }
 
   // function renderMap(data) {
   //   var max_count = data["max_count"];
