--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -63,38 +63,41 @@ $(document).ready(function(){
   }
 
   function renderMap(data) {
-    var promise = Cesium.GeoJsonDataSource.load(data);
+    var promise = Cesium.GeoJsonDataSource.load(data, {
+      stroke: Cesium.Color.fromBytes(0, 230, 240, 38)
+    });
     promise.then(function(dataSource) {
-      viewer.dataSources.add(dataSource);
+
+      viewer.dataSources.add(dataSource)
       viewer.zoomTo(dataSource);
       var entities = dataSource.entities.values;
 
       for (var i = 0; i < entities.length; i++) {
         var entity = entities[i];
         var name = entity.name;
+        var max_count = data["max_count"];
         if (entity.billboard != undefined) {
           if (entity.properties.feature_type._value === "airport") {
             entity.billboard.image = "<%= asset_path('airport.png') %>";
           } else if (entity.properties.feature_type._value === "waypoint") {
             entity.billboard.image = "<%= asset_path('waypoint.png') %>";
           }
+          entity.billboard.horizontalOrigin = Cesium.HorizontalOrigin.CENTER;
+          entity.billboard.verticalOrigin = Cesium.VerticalOrigin.CENTER;
+          entity.billboard.color = new Cesium.Color(1.0, 1.0, 1.0, setOpacity(max_count, entity));
+          entity.billboard.eyeOffset = new Cesium.Cartesian3( 0, 0, -100 );
         }
       }
     })
   }
 
-
-  //       var entity = entities[i];
-  //       console.log(entity);
-  //       entity.billboard.color = Cesium.Color.fromBytes(0, 230, 240, 38);
-  //       // entity.point = new Cesium.PointGraphics({
-  //       //     color: Cesium.Color.fromRandom(),
-  //       //     pixelSize: 10
-  //       // });
-  //     }
-  //   })
-  //     // stroke: Cesium.Color.fromBytes(0, 230, 240, 38)
-  // }
+  function setOpacity(max_count, entity) {
+    var opacity = Math.max((entity.properties.count/max_count) * 12, 0.3)
+    if (opacity > 1) {
+      opacity = 1
+    }
+    return opacity
+  }
 
   // function renderMap(data) {
   //   var max_count = data["max_count"];
