some cleanup. Map working. Needs tooltips

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -26,6 +26,5 @@
     </div>
   </div>
 </div>
-
-<div class='homepage-map' id='mapid'></div>
+<div class='homepage-map' id='cesiumContainer'></div>
 <%= render 'vendors/fb_pixel_register' %>
