--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -50,15 +50,17 @@ $(document).ready(function(){
         var entity = entities[i];
         var max_count = data["max_count"];
         if (entity.billboard != undefined) {
-          // if (entity.properties.feature_type._value === "airport") {
-          //   entity.billboard.image = "<%= asset_path('airport.png') %>";
-          // } else if (entity.properties.feature_type._value === "waypoint") {
-          //   entity.billboard.image = "<%= asset_path('waypoint.png') %>";
-          // }
-          // entity.billboard.horizontalOrigin = Cesium.HorizontalOrigin.CENTER;
-          // entity.billboard.verticalOrigin = Cesium.VerticalOrigin.CENTER;
+          if (entities.length < 1000) {
+            if (entity.properties.feature_type._value === "airport") {
+              entity.billboard.image = "<%= asset_path('airport.png') %>";
+            } else if (entity.properties.feature_type._value === "waypoint") {
+              entity.billboard.image = "<%= asset_path('waypoint.png') %>";
+            }
+            entity.billboard.horizontalOrigin = Cesium.HorizontalOrigin.CENTER;
+            entity.billboard.verticalOrigin = Cesium.VerticalOrigin.CENTER;
+            entity.billboard.eyeOffset = new Cesium.Cartesian3( 0, 0, -100 );
+          }
           entity.billboard.color = new Cesium.Color.fromHsl(0, 0, 1, setOpacity(max_count, entity));
-          // entity.billboard.eyeOffset = new Cesium.Cartesian3( 0, 0, -100 );
         }
       }
     })
