--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -34,6 +34,16 @@ $(document).ready(function(){
     });
   }
 
+  var airportIcon = "<%= asset_path('airport.png') %>";
+  var waypointIcon = "<%= asset_path('waypoint.png') %>";
+  var billboards = viewer.scene.primitives.add(new Cesium.BillboardCollection());
+  billboards.add({
+    image : airportIcon
+  });
+  billboards.add({
+    image : waypointIcon
+  });
+
   function renderMap(data) {
     var promise = Cesium.GeoJsonDataSource.load(data, {
       stroke: Cesium.Color.fromBytes(0, 230, 240, 40),
@@ -50,16 +60,14 @@ $(document).ready(function(){
         var entity = entities[i];
         var max_count = data["max_count"];
         if (entity.billboard != undefined) {
-          if (entities.length < 1000) {
-            if (entity.properties.feature_type._value === "airport") {
-              entity.billboard.image = "<%= asset_path('airport.png') %>";
-            } else if (entity.properties.feature_type._value === "waypoint") {
-              entity.billboard.image = "<%= asset_path('waypoint.png') %>";
-            }
-            entity.billboard.horizontalOrigin = Cesium.HorizontalOrigin.CENTER;
-            entity.billboard.verticalOrigin = Cesium.VerticalOrigin.CENTER;
-            entity.billboard.eyeOffset = new Cesium.Cartesian3( 0, 0, -100 );
+          if (entity.properties.feature_type._value === "airport") {
+            entity.billboard = billboards.get(0);
+          } else if (entity.properties.feature_type._value === "waypoint") {
+            entity.billboard = billboards.get(1);
           }
+          entity.billboard.horizontalOrigin = Cesium.HorizontalOrigin.CENTER;
+          entity.billboard.verticalOrigin = Cesium.VerticalOrigin.CENTER;
+          entity.billboard.eyeOffset = new Cesium.Cartesian3( 0, 0, -100 );
           entity.billboard.color = new Cesium.Color.fromHsl(0, 0, 1, setOpacity(max_count, entity));
         }
       }
