had to switch back to ugly pins for very large datasets

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -60,14 +60,16 @@ $(document).ready(function(){
         var entity = entities[i];
         var max_count = data["max_count"];
         if (entity.billboard != undefined) {
-          if (entity.properties.feature_type._value === "airport") {
-            entity.billboard = billboards.get(0);
-          } else if (entity.properties.feature_type._value === "waypoint") {
-            entity.billboard = billboards.get(1);
+          if (entities.length < 1500) {
+            if (entity.properties.feature_type._value === "airport") {
+              entity.billboard = billboards.get(0);
+            } else if (entity.properties.feature_type._value === "waypoint") {
+              entity.billboard = billboards.get(1);
+            }
+            entity.billboard.horizontalOrigin = Cesium.HorizontalOrigin.CENTER;
+            entity.billboard.verticalOrigin = Cesium.VerticalOrigin.CENTER;
+            entity.billboard.eyeOffset = new Cesium.Cartesian3( 0, 0, -100 );
           }
-          entity.billboard.horizontalOrigin = Cesium.HorizontalOrigin.CENTER;
-          entity.billboard.verticalOrigin = Cesium.VerticalOrigin.CENTER;
-          entity.billboard.eyeOffset = new Cesium.Cartesian3( 0, 0, -100 );
           entity.billboard.color = new Cesium.Color.fromHsl(0, 0, 1, setOpacity(max_count, entity));
         }
       }
