--- a/app/views/users/home_page/_flights_leaderboard.html.erb
+++ b/app/views/users/home_page/_flights_leaderboard.html.erb
@@ -2,7 +2,8 @@
   <div class="card-body">
     <h4 class="card-title title">Most Flights</h4>
     <hr>
-    <% User.most_flights.each do |user| %>
+    <% User.most_flights.each do |user_id| %>
+      <% user = User.find(user_id) %>
       <% if !user.username then next end %>
       <div class="row text-nowrap">
         <div class="col-7 name">
