--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -3,7 +3,7 @@
 </p>
 
 <p>
-  Arelplane is a community of pilots. Feel free to look around at other pilots pages, and if you see something cool, let the pilot know by liking their map.
+  Arelplane is a community of pilots. Feel free to look around at other pilots' pages, and if you see something cool, let the pilot know by liking their map.
 </p>
 
 <p>
