basically done. Just need to style email a little

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -35,6 +35,10 @@ a:hover {
   color: $darkLinkColor;
 }
 
+.full-page-container {
+  min-height: 85vh;
+}
+
 h6 {
   color: white;
   font-weight: $light;
