--- a/app/views/user_mailer/new_follower.html.erb
+++ b/app/views/user_mailer/new_follower.html.erb
@@ -2,6 +2,10 @@
 
 <p><%= link_to @follower.name, username_url(@follower.username) %> just liked your map on <%= link_to 'Arelplane!', root_url %></p>
 
+<p>Harry Bliss would be proud.</p>
+
+<%= link_to image_tag('https://s3.amazonaws.com/logbookviz/email_images/Screen+Shot+2018-03-29+at+12.30.31.png'), 'https://www.youtube.com/watch?v=ihee35QrWtk' %>
+
 <br>
 <br>
 
