--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,10 +4,10 @@
 
 <div class='container-fluid user-profile'>
   <div class='row'>
-    <div class='col-md-3 col-12 d-none d-md-block remove-lr-padding' id='sticky-sidebar'>
+    <div class='d-none d-md-block remove-lr-padding' id='sticky-sidebar'>
       <%= render 'users/profile/side_bar' %>
     </div>
-    <div class='col-md-9 col-12 remove-lr-padding' id='user-map'>
+    <div class='col-md remove-lr-padding' id='user-map'>
       <%= render 'users/profile/share_button' %>
       <div class="user-map" id="cesiumContainer"></div>
     </div>
