[WIP] Starting to add aircraft model, more profile information, and connect it all together.

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -58,6 +58,15 @@
   }
 }
 
+.edit-account {
+  .form-check-label {
+    color: $lightTextColor;
+    font-size: 1rem;
+    font-weight: $extraLight;
+    font-family: $baseFont;
+  }
+}
+
 #user-map {}
 
 .user-map {
