--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -22,8 +22,8 @@
           </div>
           <div class="col-12 col-lg-6">
             <div class="mb-3">
-              <%= form.label :aircraft_id, 'Aircraft Identifier, e.g. N17AV', class: 'light-sub-text' %><br />
-              <%= form.text_field :aircraft_id, id: :flight_aircraft_id, class: 'form-control' %>
+              <%= form.label :aircraft_identifier, 'Aircraft Identifier, e.g. N17AV', class: 'light-sub-text' %><br />
+              <%= form.text_field :aircraft_identifier, id: :flight_aircraft_id, class: 'form-control' %>
             </div>
           </div>
         </div>
