--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -82,7 +82,7 @@
                       <% end %>
                     <% end %>
                   </td>
-                  <td><%= flight.aircraft_id %></td>
+                  <td><%= flight.aircraft_identifier %></td>
                   <td><%= Location.find(flight.from_id).name_and_identifier %></td>
                   <td><%= Location.find(flight.to_id).name_and_identifier %></td>
                   <td><%= flight.time_out %></td>
@@ -131,7 +131,7 @@
                   <% end %>
                 <% end %>
               </td>
-              <td><%= flight.aircraft_id %></td>
+              <td><%= flight.aircraft_identifier %></td>
               <td><%= Location.find(flight.from_id).name_and_identifier %></td>
               <td><%= Location.find(flight.to_id).name_and_identifier %></td>
               <td><%= flight.time_out %></td>
