--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,16 +27,8 @@
             <%= f.text_field :username, class: 'form-control' %><br />
           <% end %>
 
-          <%= f.label :instagram, class: 'light-sub-text' %><br />
-          <small id="passwordHelpInline" class="text-info">
-            Add a link to your instagram account on your profile
-          </small>
-          <div class="input-group mb-2 mb-sm-0">
-            <div class="input-group-prepend">
-              <div class="input-group-text">@</div>
-            </div>
-            <%= f.text_field :instagram, class: 'form-control' %>
-          </div><br />
+          <%= f.label :bio, class: 'light-sub-text' %><br />
+          <%= f.text_area :bio, class: 'form-control user-bio', maxlength: 240, placeholder: 'Max 240 characters' %><br />
 
           <%= f.label :ratings, class: 'light-sub-text' %><br>
           <small id="passwordHelpInline", class="text-info">
@@ -58,6 +50,17 @@
           <% end %>
           <div class="input-group mb-2 mb-sm-0">
             <%= f.collection_select :home_base_id, Location.order(:identifier).page, :id, :identifier, { include_blank: true }, class: 'identifier_lookup', id: 'departure_airport', style: 'width: 100%;' %>
+          </div><br />
+
+          <%= f.label :instagram, class: 'light-sub-text' %><br />
+          <small id="passwordHelpInline" class="text-info">
+            Add a link to your instagram account on your profile
+          </small>
+          <div class="input-group mb-2 mb-sm-0">
+            <div class="input-group-prepend">
+              <div class="input-group-text">@</div>
+            </div>
+            <%= f.text_field :instagram, class: 'form-control' %>
           </div><br />
 
           <%= f.label :current_password, class: 'light-sub-text' %><br>
