--- a/app/views/users/profile/_side_bar.html.erb
+++ b/app/views/users/profile/_side_bar.html.erb
@@ -9,6 +9,15 @@
     <div class='sub-text joined-date pl-3'>
       Joined <%= @user.created_at.strftime('%B %e, %Y') %>
     </div>
+    <div class="m-3 bio">
+      <%= simple_format(@user.bio) %>
+    </div>
+    <% if @user.home_base %>
+      <div class="m-3 home-base">
+        <%= image_tag 'icons/home-base.png', height: '24', width: '20', class: 'home-base-icon' %>
+        <span>Based out of <%= @user.home_base.identifier %></span>
+      </div>
+    <% end %>
     <div class="sub-text pl-3 mt-2">
       <%= render 'users/profile/follow_form', user: @user %>
     </div>
